2008-11-17  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template file.

	* godmode/grupos/lista_grupos.php,
	  godmode/usuarios/role_manager.php,
	  godmode/usuarios/lista_usuarios.php: Updated tables width.

2008-11-17  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation.

	*  include/languages/index.pot: Updated po template file.

	* operation/user_report/report_annual.php,
	  operation/user_report/report_weekly.php,
	  operation/user_report/report_monthly.php: Updated tables width and
	  translation infrastructure.

2008-11-17  Esteban Sanchez  <estebans@artica.es>

	* images/html.png: Added to repository. New icon for report buttons.

	* include/styles/integria.css: Added new style for report buttons.
	Added a float_right class.

	* include/functions_incidents.php: Complete documentation for
	print_incidents_stats(). Incident links now point to the right place.
	Removed enterprise_hook call.

	* operation/incidents/incident.php: Make a string translatable. Fixed
	HTML style.

	* operation/incidents/incident_search.php: Fixed an error showing
	resolution names. Added an enterprise hook when printing incidents to
	report tool. HTML style fixed.

	* include/config_process.php: PHP tag must be lowercase.

	* operation/users/user_task_assigment.php: Tab style correction.

2008-11-17  Esteban Sanchez  <estebans@artica.es>

	* include/functions_incidents.php: Fixed variable name that was
	causing notices.

	* include/js/integria.js: When an element is pulsated, it receives the
	focus also.

	* include/js/integria_incident_search.js: Added
	configure_contact_create_form(), show_contact_create_dialog(). Removed
	debug output using console.log. Show create contact dialog when
	clicking create on contact list in an inventory.
